update of homepage

--- a/KnowItAll/TabBar.storyboard
+++ b/KnowItAll/TabBar.storyboard
@@ -13,7 +13,8 @@
         <scene sceneID="1kx-zO-Z67">
             <objects>
                 <tabBarController storyboardIdentifier="TabBar" id="Rwo-xT-QG4" customClass="TabBar" customModule="KnowItAll" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="SY3-Vm-s6f">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="SY3-Vm-s6f">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
